2014-08-29 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/GNUmakefile
	* Modules/Editors/ProjectCenter/LineJumper.h
	* Modules/Editors/ProjectCenter/LineJumper.m
	* Modules/Editors/ProjectCenter/PCEditorView.m
	* Modules/Editors/ProjectCenter/Resources/LineJumper.gorm
	Implement and add a simple go-to-line panel

2014-08-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m (unhighlightCharacter:):
	* Modules/Editors/ProjectCenter/PCEditor.m
	(highlightCharacterAt:inEditor:):
	Fix condition order to prevent out of range array accesses, which
	may lead to a segfault when unhighlighting two matching parentheses.

	Fix by Markus <desterium@t-online.de>.

2014-08-18 16:07-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Aggregate/Resources/Inspector.gorm
	* Modules/Projects/Application/Resources/Inspector.gorm
	* Modules/Projects/Application/Resources/Main.gorm
	* Modules/Projects/Bundle/Resources/Inspector.gorm
	* Modules/Projects/Framework/Resources/Inspector.gorm
	* Modules/Projects/Library/Resources/Inspector.gorm
	* Modules/Projects/ResourceSet/Resources/Inspector.gorm
	* Modules/Projects/Tool/Resources/Inspector.gorm: Update all
	gorm files to latest version.

2014-08-04 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Fix return value.

2014-08-04 Riccardo Mottola <rm@gnu.org>

	* English.lproj/ProjectCenter.gorm
	* Headers/Protocols/CodeEditorView.h
	* Modules/Editors/ProjectCenter/PCEditor.m
	* Modules/Editors/ProjectCenter/PCEditorView.h
	* Modules/Editors/ProjectCenter/PCEditorView.m
	Move GoToLine to the View akin to the NSTextView find panel and
	declare it in the editor view protocol.

2014-08-03 German Arias <germanandre@gmx.es>

	* Modules/Editors/ProjectCenter/PCEditor.m: Don't use
	PCAuxiliaryWindow. This avoid the use of FindPanel.

2014-07-30 Riccardo Mottola <rm@gnu.org>

	* Framework/PCEditorManager.m
	* Framework/PCProjectBuilder.m